--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ body {
   background: #6c8dd0;
 }
 #navlogo {
-  height: 60px;
+  margin-top: 5px;
+  height: 50px;
 }
 #adviceText {
   font-size: 16px;
