--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
   font-family: "Red Hat Display", sans-serif;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 #navpc {
   height: 60px;
@@ -7,7 +9,6 @@ body {
   box-shadow: 0px 2px 10px #6c8dd05b;
 }
 #advice {
-  height: 36px;
   background: #6c8dd0;
 }
 #navlogo {
@@ -16,8 +17,8 @@ body {
 }
 #adviceText {
   font-size: 16px;
-  line-height: 36px;
   color: white;
+  margin: 0;
 }
 #navmenubox {
   height: 40px;
@@ -59,4 +60,84 @@ body {
     rgba(143, 0, 255, 0.08) 100%
   );
   font-weight: 500;
+}
+#serviceicon {
+  width: 100px;
+  height: 100px;
+  margin-top: 30px;
+}
+#testimonybox {
+  height: 480px;
+  margin-left: -80px;
+}
+#testimony {
+  font-weight: 500;
+  font-size: 18px;
+}
+#tesbox {
+  padding: 22px;
+}
+#stepsection {
+  background: #324a5e;
+  padding-left: 80px;
+}
+#testimonyGiver {
+  font-size: 18px;
+}
+#testimonyGIFbox {
+  height: 480px;
+}
+#testimonyGIF {
+  height: 100%;
+}
+#guidotext {
+  font-size: 22px;
+  width: 84%;
+  font-weight: 400;
+  color: #747474;
+}
+#joinustop {
+}
+@media screen and (max-width: 769px) {
+  #testimonybox {
+    height: 480px;
+    margin-left: 0;
+  }
+  #testimony {
+    font-weight: 500;
+    font-size: 12px;
+  }
+  #tesbox {
+    padding: 16px;
+  }
+  #landing {
+    border-left: solid 0px #324a5e;
+    border-right: solid 0px #324a5e;
+  }
+  #stepsection {
+    background: #324a5e;
+    padding-left: 0px;
+  }
+  #testimonyGiver {
+    font-size: 12px;
+  }
+  #testimonyGIFbox {
+    max-width: 100%;
+    height: auto;
+  }
+  #testimonyGIF {
+    width: 100%;
+  }
+  #landingLeft {
+    padding-left: 20px;
+  }
+  #navmenubox {
+    display: none;
+  }
+  #guidotext {
+    font-size: 18px;
+    width: 96%;
+    font-weight: 400;
+    color: #747474;
+  }
 }
