--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body {
   font-family: "Red Hat Display", sans-serif;
   max-width: 100vw;
-  overflow-x: hidden;
 }
 #navpc {
   height: 60px;
@@ -96,8 +95,7 @@ body {
   font-weight: 400;
   color: #747474;
 }
-#joinustop {
-}
+
 @media screen and (max-width: 769px) {
   #testimonybox {
     height: 480px;
@@ -135,6 +133,7 @@ body {
     display: none;
   }
   #guidotext {
+    margin-right: 0;
     font-size: 18px;
     width: 96%;
     font-weight: 400;
