--- a/style.css
+++ b/style.css
@@ -139,4 +139,9 @@ body {
     font-weight: 400;
     color: #747474;
   }
+  #adviceText {
+    font-size: 12px;
+    color: white;
+    margin: 0;
+  }
 }
