--- a/style.css
+++ b/style.css
@@ -140,6 +140,15 @@ body {
     color: #747474;
   }
   #adviceText {
-    font-size: 10px !important;
+    font-size: 14px !important;
   }
+}
+.gradient-text {
+  background-image: linear-gradient(45deg, #ff00d6, #324a5e);
+  background-size: 100%;
+  background-repeat: repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
 }
