--- a/style.css
+++ b/style.css
@@ -19,6 +19,22 @@ body {
   color: white;
   margin: 0;
 }
+.gradient-text {
+  background-image: linear-gradient(
+    45deg,
+    #ff00d6,
+    #6c8dd0,
+    #298e3e,
+    #fab819,
+    #393137
+  );
+  background-size: 100%;
+  background-repeat: repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
+}
 #navmenubox {
   height: 40px;
   margin-top: 10px;
@@ -140,15 +156,6 @@ body {
     color: #747474;
   }
   #adviceText {
-    font-size: 14px !important;
+    font-size: 12px !important;
   }
-}
-.gradient-text {
-  background-image: linear-gradient(45deg, #ff00d6, #324a5e);
-  background-size: 100%;
-  background-repeat: repeat;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  -moz-background-clip: text;
-  -moz-text-fill-color: transparent;
 }
