--- a/style.css
+++ b/style.css
@@ -77,8 +77,8 @@ body {
   font-weight: 500;
 }
 #serviceicon {
-  width: 100px;
-  height: 100px;
+  width: 120px;
+  height: 120px;
   margin-top: 30px;
 }
 #testimonybox {
@@ -111,7 +111,9 @@ body {
   font-weight: 400;
   color: #747474;
 }
-
+#sizedBox {
+  height: 100px;
+}
 @media screen and (max-width: 769px) {
   #testimonybox {
     height: 480px;
@@ -157,5 +159,11 @@ body {
   }
   #adviceText {
     font-size: 12px !important;
+  }
+  #mobnotbr {
+    display: none;
+  }
+  #sizedBox {
+    height: 40px;
   }
 }
