--- a/style.css
+++ b/style.css
@@ -20,14 +20,7 @@ body {
   margin: 0;
 }
 .gradient-text {
-  background-image: linear-gradient(
-    45deg,
-    #ff00d6,
-    #6c8dd0,
-    #298e3e,
-    #fab819,
-    #393137
-  );
+  background-image: linear-gradient(45deg, #ff00d6, #6c8dd0, #298e3e, #fab819);
   background-size: 100%;
   background-repeat: repeat;
   -webkit-background-clip: text;
