--- a/style.css
+++ b/style.css
@@ -107,6 +107,19 @@ body {
 #sizedBox {
   height: 100px;
 }
+#paraValue {
+  padding: 0;
+  margin: 0;
+  font-size: 48px;
+  color: white;
+}
+#parameters {
+  font-size: 20px;
+  color: white;
+}
+#paraIcon {
+  height: 80px;
+}
 @media screen and (max-width: 769px) {
   #testimonybox {
     height: 480px;
