--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ body {
 #stepsection {
   background: #324a5e;
   padding-left: 80px;
+  padding-right: 80px;
 }
 
 #guidotext {
@@ -142,6 +143,7 @@ body {
   #stepsection {
     background: #324a5e;
     padding-left: 0px;
+    padding-right: 0;
   }
 
   #landingLeft {
