--- a/style2.css
+++ b/style2.css
@@ -15,6 +15,12 @@ body {
   margin-top: 5px;
   height: 50px;
 }
+#points {
+  margin-top: -12px;
+}
+#pointNumber {
+  box-shadow: 0 0 40px rgba(255, 255, 255, 0.726);
+}
 #adviceText {
   font-size: 16px;
   color: white;
