--- a/style2.css
+++ b/style2.css
@@ -101,7 +101,12 @@ body {
   height: 120px;
   margin-top: 30px;
 }
-
+#happyinvesting {
+  text-align: start;
+  font-size: 28px;
+  font-weight: 700;
+  color: #6c8dd0;
+}
 #testimony {
   font-weight: 500;
 }
@@ -115,8 +120,8 @@ body {
 }
 
 #guidotext {
-  font-size: 22px;
-  width: 84%;
+  width: 90%;
+  font-size: 28px;
   font-weight: 400;
   color: #747474;
 }
@@ -188,7 +193,7 @@ body {
   }
   #guidotext {
     margin-right: 0;
-    font-size: 16px;
+    font-size: 20px;
     width: 100%;
     font-weight: 400;
     color: #747474;
