--- a/style2.css
+++ b/style2.css
@@ -15,6 +15,34 @@ body {
   padding-top: 10px;
   padding-bottom: 10px;
 }
+#darkSpace {
+  height: 120px;
+}
+#swipeUp {
+  height: 54px;
+}
+#swipeBtn {
+  height: 54px;
+  animation: scrollDown 1.5s linear infinite;
+}
+@keyframes scrollDown {
+  0% {
+    transform: translateY(0);
+    animation-timing-function: ease-in-out;
+  }
+
+  50% {
+    transform: translateY(-20px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+#investText {
+  font-size: 60px;
+  font-weight: 700;
+  color: rgb(231, 231, 231);
+}
 #joinuslanding {
   background: #313131;
   font-weight: 500;
@@ -28,7 +56,7 @@ body {
   border-radius: 12px;
 }
 #advice {
-  background: #6c8dd0;
+  background: #313131;
 }
 #navlogo {
   margin-top: 5px;
@@ -90,10 +118,10 @@ body {
 }
 
 #landingImgBox {
-  background: url(img/health.gif);
+  background: url(img/nutrition2.gif);
 
   background-size: cover;
-  background-position: center;
+  background-position: top;
 }
 #insidelandingBox {
   background: rgba(0, 0, 0, 0.7);
@@ -196,7 +224,7 @@ body {
   }
   #guidotext {
     margin-right: 0;
-    font-size: 12px;
+    font-size: 16px;
     width: 100%;
     font-weight: 400;
     color: #747474;
@@ -209,5 +237,14 @@ body {
   }
   #sizedBox {
     height: 40px;
+  }
+  #darkSpace {
+    height: 100px;
+  }
+  #investText {
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 68px;
+    color: rgb(231, 231, 231);
   }
 }
