--- a/style2.css
+++ b/style2.css
@@ -183,6 +183,18 @@ body {
 #pose2 {
   display: none;
 }
+#testimonialImage {
+  width: 100px;
+  height: 100px;
+  border-radius: 100%;
+}
+#testimonialRight {
+  transform: translateX(-70px);
+}
+#testimonialrightColumn {
+  background: #d6fff4;
+  border-radius: 0px 24px 24px 48px;
+}
 @media screen and (max-width: 769px) {
   #pose {
     display: none;
@@ -246,5 +258,17 @@ body {
     font-weight: 700;
     line-height: 68px;
     color: rgb(231, 231, 231);
+  }
+  #testimonialRight {
+    transform: translateX(0px);
+    text-align: end;
+    margin-top: -140px;
+  }
+  #testimonialrightColumn {
+    background: #ffffff;
+    border-radius: 0px 20px 20px 0px;
+  }
+  #testimonialImage {
+    margin-right: 6px;
   }
 }
